--- a/src/main/java/br/com/dbs/java/mps/view/CantorFrame.form
+++ b/src/main/java/br/com/dbs/java/mps/view/CantorFrame.form
@@ -49,7 +49,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="camposPnl" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="botoesPnl" min="-2" max="-2" attributes="0"/>
+              <Component id="botoesPnl" min="-2" pref="38" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
