--- a/src/main/java/br/com/dbs/java/mps/view/MusicPlaylistFrame.form
+++ b/src/main/java/br/com/dbs/java/mps/view/MusicPlaylistFrame.form
@@ -49,6 +49,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Usuarios"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemUsuarioActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
