--- a/src/main/java/br/com/dbs/java/mps/view/MusicaDialog.form
+++ b/src/main/java/br/com/dbs/java/mps/view/MusicaDialog.form
@@ -81,6 +81,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Excluir"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="excluirBtnActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -184,6 +187,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="musicasTblMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -236,6 +242,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Pesquisar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pesquisarBtnActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
